# scijigsaw

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  PUSH_INSTRUCTIONS.md  README.md  apply_fix.sh  environment.yml  pyproject.toml
.github/workflows/: test.yml
benchmark/: README.md  reference_labels.csv  run_benchmark.py
examples/structures/: make_test_structures.py
examples/structures_format_cases/: README.md
examples/structures_parsing/: README.md
examples/vamp2/: interactions.csv  proteins.csv
scripts/: benchmark_runtime.py  fig1_min.py  fig2_min.py  fig4_inflammasome.py  fig_assembled.py  fig_assembly_steps.py  reproduce_figures.py  reproduce_numbers.py  simple_real_test.py  validate_board_from_structures.py
src/scijigsaw/: __init__.py  assembly.py  benchmark.py  cases.py  cli.py  extract.py  geometry.py  render.py  results.py  tiles.py
tests/: test_assembly.py  test_benchmark.py  test_deposited_parsing.py  test_geometry.py  test_render.py  test_structure_formats.py  test_tiles.py  test_topology.py
